--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -43,6 +43,17 @@
     color: var(--hover-color);
 }
 
+.logoImage {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+}
+
+.logoImage:hover {
+    transform: scale(1.1);
+}
 
 .faFilter{
     background-color: var(--button-color);
